--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                           <div class="row left double-col">
                               <div class="col-sm-12 col-md-6">
                                 <figure>
-                                  <a href="about_thnoc.html"><img class="thumb" src="img/thnoc1.png" alt="The Historic New Orleans Collection"/></a>
+                                  <a href="about_thnoc.html"><img class="thumb" src="img/thnoc1.PNG" alt="The Historic New Orleans Collection"/></a>
                                   <figcaption><a href="about_thnoc.html">The Historic New Orleans Collection</a></figcaption>
                                 </figure>
                               </div>
