--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                             <div class="row left double-col">
                                 <div class="col-sm-12 col-md-6">
                                     <figure>
-                                      <a href="about_zwart.html"><img class="gallery-fit" src="img/IMG_1905.jpg" alt="Zilly's War: Chapter One"></a>
+                                      <a href="about_zwart.html"><img class="gallery-fit" src="img/IMG_1905.JPG" alt="Zilly's War: Chapter One"></a>
                                       <figcaption><a href="about_zwart.html">Zilly's War: Chapter One</a></figcaption>
                                     </figure>
                                   </div>
