--- a/about_zwart.html
+++ b/about_zwart.html
@@ -37,7 +37,7 @@
                       <h3>Zilly's War: Chapter One</h3>
                     </div>
                     <div class="container">
-                        <img src="img/IMG_1905.jpg" alt="Zilly's War: Chapter One Behind the Scenes"/>                              
+                        <img src="img/IMG_1905.JPG" alt="Zilly's War: Chapter One Behind the Scenes"/>                              
                     </div>
                     <div class="section section-border">
                         <div class="row left double-col">
@@ -70,50 +70,50 @@
                     <div class="section section-border">
                       <div class="row left double-col">
                           <div class="col-sm-12 col-md-6">
-                              <img class ="gallery-fit" src="img/IMG_1202.jpg" alt="Zilly's War: Chapter One Behind the Scenes"/>
+                              <img class ="gallery-fit" src="img/IMG_1202.JPG" alt="Zilly's War: Chapter One Behind the Scenes"/>
                           </div>
                           <div class="col-sm-12 col-md-6">
-                              <img class ="gallery-fit" src="img/IMG_1334.jpg" alt="Zilly's War: Chapter One Behind the Scenes"/>
+                              <img class ="gallery-fit" src="img/IMG_1334.JPG" alt="Zilly's War: Chapter One Behind the Scenes"/>
                           </div>
                       </div>
                       <div class="row left double-col">
                         <div class="col-sm-12 col-md-6">
-                            <img class ="gallery-fit" src="img/IMG_1227.jpg" alt="Zilly's War: Chapter One Behind the Scenes"/>
+                            <img class ="gallery-fit" src="img/IMG_1227.JPG" alt="Zilly's War: Chapter One Behind the Scenes"/>
                         </div>
                         <div class="col-sm-12 col-md-6">
-                            <img class ="gallery-fit" src="img/IMG_1354.jpg" alt="Zilly's War: Chapter One Behind the Scenes"/>
+                            <img class ="gallery-fit" src="img/IMG_1354.JPG" alt="Zilly's War: Chapter One Behind the Scenes"/>
                         </div>
                     </div>
                     <div class="row left double-col">
                       <div class="col-sm-12 col-md-6">
-                          <img class ="gallery-fit" src="img/IMG_1692.jpg" alt="Zilly's War: Chapter One Behind the Scenes"/>
+                          <img class ="gallery-fit" src="img/IMG_1692.JPG" alt="Zilly's War: Chapter One Behind the Scenes"/>
                       </div>
                       <div class="col-sm-12 col-md-6">
-                          <img class ="gallery-fit" src="img/IMG_1697.jpg" alt="Zilly's War: Chapter One Behind the Scenes"/>
-                      </div>
-                    </div>
-                    <div class="row left double-col">
-                      <div class="col-sm-12 col-md-6">
-                          <img class ="gallery-fit" src="img/IMG_1306.jpg" alt="Zilly's War: Chapter One Behind the Scenes"/>
-                      </div>
-                      <div class="col-sm-12 col-md-6">
-                          <img class ="gallery-fit" src="img/IMG_1701.jpg" alt="Zilly's War: Chapter One Behind the Scenes"/>
+                          <img class ="gallery-fit" src="img/IMG_1697.JPG" alt="Zilly's War: Chapter One Behind the Scenes"/>
                       </div>
                     </div>
                     <div class="row left double-col">
                       <div class="col-sm-12 col-md-6">
-                          <img class ="gallery-fit" src="img/IMG_1872.jpg" alt="Zilly's War: Chapter One Behind the Scenes"/>
+                          <img class ="gallery-fit" src="img/IMG_1306.JPG" alt="Zilly's War: Chapter One Behind the Scenes"/>
                       </div>
                       <div class="col-sm-12 col-md-6">
-                          <img class ="gallery-fit" src="img/IMG_1782.jpg" alt="Zilly's War: Chapter One Behind the Scenes"/>
+                          <img class ="gallery-fit" src="img/IMG_1701.JPG" alt="Zilly's War: Chapter One Behind the Scenes"/>
                       </div>
                     </div>
                     <div class="row left double-col">
                       <div class="col-sm-12 col-md-6">
-                          <img class ="gallery-fit" src="img/IMG_1417.jpg" alt="Zilly's War: Chapter One Behind the Scenes"/>
+                          <img class ="gallery-fit" src="img/IMG_1872.JPG" alt="Zilly's War: Chapter One Behind the Scenes"/>
                       </div>
                       <div class="col-sm-12 col-md-6">
-                          <img class ="gallery-fit" src="img/IMG_1607.jpg" alt="Zilly's War: Chapter One Behind the Scenes"/>
+                          <img class ="gallery-fit" src="img/IMG_1782.JPG" alt="Zilly's War: Chapter One Behind the Scenes"/>
+                      </div>
+                    </div>
+                    <div class="row left double-col">
+                      <div class="col-sm-12 col-md-6">
+                          <img class ="gallery-fit" src="img/IMG_1417.JPG" alt="Zilly's War: Chapter One Behind the Scenes"/>
+                      </div>
+                      <div class="col-sm-12 col-md-6">
+                          <img class ="gallery-fit" src="img/IMG_1607.JPG" alt="Zilly's War: Chapter One Behind the Scenes"/>
                       </div>
                     </div>
                     </div>
