--- a/about_zw.html
+++ b/about_zw.html
@@ -73,18 +73,18 @@
                     <div class="section section-border">
                         <div class="row left double-col">
                             <div class="col-sm-12 col-md-6">
-                                <img class ="gallery-fit" src="img/zw4.png" alt="Zilly's War: Chapter One"/>
+                                <img class ="gallery-fit" src="img/zw4.PNG" alt="Zilly's War: Chapter One"/>
                             </div>
                             <div class="col-sm-12 col-md-6">
-                                <img class ="gallery-fit" src="img/zw5.png" alt="Zilly's War: Chapter One"/>
+                                <img class ="gallery-fit" src="img/zw5.PNG" alt="Zilly's War: Chapter One"/>
                             </div>
                         </div>
                         <div class="row left double-col">
                             <div class="col-sm-12 col-md-6">
-                                <img class ="gallery-fit" src="img/zw6.png" alt="Zilly's War: Chapter One"/>
+                                <img class ="gallery-fit" src="img/zw6.PNG" alt="Zilly's War: Chapter One"/>
                             </div>
                             <div class="col-sm-12 col-md-6">
-                                <img class ="gallery-fit" src="img/zw7.png" alt="Zilly's War: Chapter One"/>
+                                <img class ="gallery-fit" src="img/zw7.PNG" alt="Zilly's War: Chapter One"/>
                             </div>
                         </div>
                         <div class="container">
